--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,6 +30,8 @@
     "framer-motion": "^12.23.12",
     "gsap": "^3.13.0",
     "jquery": "^3.7.1",
+    "jspdf": "^4.1.0",
+    "jspdf-autotable": "^5.0.7",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.537.0",
     "react": "^19.0.0",
@@ -47,7 +49,8 @@
     "react-toastify": "^11.0.5",
     "styled-components": "^6.1.19",
     "swiper": "^11.2.3",
-    "tailwind-merge": "^3.0.1"
+    "tailwind-merge": "^3.0.1",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
