--- a/flutter_frontend/pubspec.yaml
+++ b/flutter_frontend/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   url_launcher: ^6.2.1
   path_provider: ^2.1.2
   open_filex: ^4.3.2
+  url_strategy: ^0.2.0
 
 dev_dependencies:
   flutter_test:
