--- a/flutter_frontend/pubspec.yaml
+++ b/flutter_frontend/pubspec.yaml
@@ -31,8 +31,10 @@ dependencies:
   flutter:
     sdk: flutter
   http: ^1.1.0
+
   shared_preferences: ^2.2.0
   jwt_decoder: ^2.0.1
+  device_info_plus: ^10.1.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
